kubernetes/pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: demo-els
spec:
  containers:
  - name: demo-els
    image: smile0x90/hello-els:0.1
    resources:
      limits:
        memory: "200Mi"
      requests:
        memory: "100Mi"
