kubernetes/service.yaml
kind: Service
apiVersion: v1
metadata:
  name: demo-els-service
spec:
  selector:
    app: demo-els
  ports:
  - protocol: TCP
    port: 8080
    targetPort: 8080
  type: ClusterIP
