kubernetes/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
  name: demo-els-ing
spec:
  rules:
  - host: demo-els.192.168.99.102.nip.io
    http:
      paths:
      - backend:
          serviceName: demo-els-service
          servicePort: 8080
        path: /
